
2010-11-January  Francesco Nori and Randaz <iron@liralab.it>
	* Stops sending both encoders if one fails (avoid troubles with coupled boards)
	* Current build 35.

2010-20-April  Francesco Nori <iron@liralab.it>
	* Stops controlling (disable PWM) if velocity messages 
	* are not received in 400ms (VELOCITY_TIMEOUT).
	* Current build 36.

2010-29-April  Francesco Nori <iron@liralab.it>
	* _vel_timeout is now passed via CAN
	* Current build 37.

2010-11-May  Francesco Nori <iron@liralab.it>
	* _vel_timeout is now passed via CAN on a separate message
	* Current build 38.	
	
2010-3-June  Marco Randazzo <marco.randazzo@iit.it>
	* Merging firmware version 1.73/1.74 in standard firmware in order to provide MODE_TORQUE control mode to all firmware versions.
	* CAN masks changed. Now all firmware versions can read force data.
	* compute_pwm function changed. All firmware versions can now enter MODE_TORQUE control mode.
	* four force watchdogs are now used to check if force data from board 11/12/13/14 are recevied.
	  boards 11/12 can be virtual (forces calculated by iDyn and transmitted on CAN bus by PC104)  
	* Current build 39.	

2010-28-June  Francesco Nori <iron@liralab.it>
	* Bug fixed on the shoulder coupling
	* Current build 40.	

2010-06-July  Marco Randazzo <marco.randazzo@iit.it>
	* Added various CAN mesages to set the impedance of a joint
	* Impedance velocity mode separated by Impedance Position Mode
	* Current build 41.	

2010-26-July  Marco Randazzo <marco.randazzo@iit.it>
	* New decoupling matrix for torque control
 	* IMPORTANT: in function can_send_broadcast() now PWM is transmitted BEFORE the decoupling.
 	             function decouple_dutycycle_new_joint() expects transmitted torques at the joint level (before decoupling),
		     while the old function decouple_dutycycle() expects torques at motor level (after decoupling) 
		     you can change this behavior by setting/unsetting the macro USE_NEW_DECOUPLING in decoupling.h 
	* Current build 43
	